# yolov3

./: .gitignore  README.md  detect.py  eval.py  evaluation.py  hyperConfGUI.py  hyperGUI.py  main.py  predict.py  pyproject.toml  requirements.txt  run_logging.sh  train.py  train_tiny.py  trian.py  val.py  voc_train.txt
coco_util/: label_tool.py  label_util.py
config/: anchors.txt  config.json  datasetParameter.json  datasets.yaml  model.json  modelParameter.json  model_config.py  trainParameter.json  yolo_conf.yaml  yolov3.py  yolov3.yaml
data/: coco_names.yaml  voc_names.yaml
label_util/: coco_util.py  voc_util.py
models/: common.py  yolo.py  yolov3-tiny.yaml  yolov3.yaml
nets/: darknet.py  darknet53.py  yolo.py  yolo_copy.py  yolo_loss.py  yolov3.py  yolov3_tiny.py  yolov3_tiny_loss.py
utils/: ComputeLoss.py  __init__.py  boxTool.py  calculate_dataset_mean_std.py  dataloader.py  general.py  kmeans.py  logger.py  loss.py  metrics.py  nms.py  plots.py  tools.py  torch_utils.py  yolo_trainning.py
