[project]
name = "yolov3"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "albumentations>=2.0.8",
    "loguru>=0.7.3",
    "mss>=10.0.0",
    "numpy==2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pycocotools>=2.0.10",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "setuptools==80.9.0",
    "tensorboard>=2.20.0",
]
