[project]
name = "yolov3"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "loguru>=0.7.3",
    "mss>=10.0.0",
    "numpy==1.24.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "tqdm>=4.66.5",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
